feat: big push: add support for 1.21 to 1.21.10 and 26.1.2, make zooming truly infinite (slider for max zoom-in removed), and misc stuff